removed light/dark mode (couldn't solve flash bug)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,19 +11,20 @@
 @font-face {
   font-family: "Mona Sans";
   src: url("/fonts/Mona-Sans.woff2") format("woff2 supports variations"),
-    url("/public/fonts/Mona-Sans.woff2") format("woff2-variations");
+    url("/fonts/Mona-Sans.woff2") format("woff2-variations");
   font-weight: 200 900;
   font-stretch: 75% 125%;
-  font-style: UltraLight Narrow;
 }
+
+
 html {
-  background-color: var(--background-color);
-  color: var(--text-color);
   font-family: "Mona Sans";
   font-weight: 200;
 }
 
 body {
+  background-color: #1a1620;
+  color: #ffff;
   margin: 0 auto;
   width: 100%;
   max-width: 80ch;
@@ -36,12 +37,8 @@ body {
 }
 
 h1 {
-  color: var(--header-color);
   margin: 1rem 0;
   font-size: 2.5rem;
-}
-h2 {
-  color: var(--bold-color);
 }
 
 /* nav styles  */
@@ -55,18 +52,17 @@ h2 {
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: #ff9776;
 }
 .nav-links {
   width: 100%;
   top: 5rem;
   left: 48px;
-  background: color #ff9776;
   display: none;
   margin: 0;
 }
 
 .nav-links a {
+  color: #fff;
   display: block;
   text-align: center;
   padding: 10px 0;
@@ -74,10 +70,11 @@ h2 {
   font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
+  font-stretch: 95%;
 }
 .nav-links a:hover,
 a:focus {
-  color: #ff9776;
+  color: #ff7a51;
 }
 
 .expanded {
